# interpolate2

./: .gitignore  CMakeLists.txt  README.md  functional.cxx  functional.hxx  interpolate.cxx  interpolate.hxx  interpolate2.kdev4  keys.hxx  main.cxx  main.hxx  surface.cxx  surface.hxx  text.cxx  user.cxx  user.hxx  visual.cxx  visual.hxx
